Add matrix multiplication benchmark

--- a/src/Makefile
+++ b/src/Makefile
@@ -28,6 +28,7 @@ bpc.c \
 fib-like.c \
 qsort.c \
 barrier.c \
+mm.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
 $(runtime_SRCS)
@@ -36,7 +37,7 @@ libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 
 #//// ALL PROGRAMS /////////////////////////////////////////////////////////#
 
-PROGS = sum fibgen looptest spc bpc fib-like qsort barrier
+PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -44,6 +45,7 @@ spc_SRCS 		= spc.c $(libtasking_SRCS)
 bpc_SRCS 		= bpc.c $(libtasking_SRCS)
 fib_like_SRCS 	= fib-like.c $(libtasking_SRCS)
 qsort_SRCS 		= qsort.c $(libtasking_SRCS)
+mm_SRCS 		= mm.c $(libtasking_SRCS)
 
 #//// TEST PROGRAMS ////////////////////////////////////////////////////////#
 
