--- a/src/Makefile
+++ b/src/Makefile
@@ -33,7 +33,7 @@ barrier.c \
 mm.c \
 lu.c \
 nbody3.c \
-uts.c brg_sha1.c \
+uts_dfs.c brg_sha1.c \
 bots_common.c bots_main.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
@@ -43,7 +43,7 @@ libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 
 #//// ALL PROGRAMS /////////////////////////////////////////////////////////#
 
-PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3 uts
+PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3 uts_dfs
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -55,8 +55,8 @@ mm_SRCS 		= mm.c $(libtasking_SRCS)
 lu_SRCS 		= lu.c $(libtasking_SRCS)
 nbody3_SRCS 	= nbody3.c $(libtasking_SRCS)
 nbody3_LIBS	    = m
-uts_SRCS		= uts.c brg_sha1.c bots_common.c bots_main.c $(libtasking_SRCS)
-uts_LIBS		= m
+uts_dfs_SRCS	= uts_dfs.c brg_sha1.c bots_common.c bots_main.c $(libtasking_SRCS)
+uts_dfs_LIBS	= m
 
 #//// TEST PROGRAMS ////////////////////////////////////////////////////////#
 
