Add port of official UTS benchmark
http://sourceforge.net/p/uts-benchmark/code/ci/master/tree

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-include ../common.mk
+include ../common-gcc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 
@@ -33,17 +33,19 @@ barrier.c \
 mm.c \
 lu.c \
 nbody3.c \
-uts_dfs.c brg_sha1.c \
-bots_common.c bots_main.c \
+uts.c uts_seq.c uts_shm.c \
+uts_dfs.c \
+brg_sha1.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
 $(runtime_SRCS)
 
-libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS) 
+libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 
 #//// ALL PROGRAMS /////////////////////////////////////////////////////////#
 
-PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3 uts_dfs
+PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3
+PROGS += uts-seq uts-par
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -54,9 +56,11 @@ qsort_SRCS 		= qsort.c $(libtasking_SRCS)
 mm_SRCS 		= mm.c $(libtasking_SRCS)
 lu_SRCS 		= lu.c $(libtasking_SRCS)
 nbody3_SRCS 	= nbody3.c $(libtasking_SRCS)
-nbody3_LIBS	    = m
-uts_dfs_SRCS	= uts_dfs.c brg_sha1.c bots_common.c bots_main.c $(libtasking_SRCS)
-uts_dfs_LIBS	= m
+nbody3_LIBS 	= m
+uts_seq_SRCS	= uts_seq.c uts.c brg_sha1.c
+uts_seq_LIBS	= m
+uts_par_SRCS	= uts_shm.c uts.c brg_sha1.c $(libtasking_SRCS)
+uts_par_LIBS	= m
 
 #//// TEST PROGRAMS ////////////////////////////////////////////////////////#
 
@@ -67,7 +71,7 @@ fibgen_SRCS 	= fibgen.c $(libtasking_SRCS)
 looptest_SRCS	= looptest.c $(libtasking_SRCS)
 barrier_SRCS 	= barrier.c $(libtasking_SRCS)
 
-VPATH += channel_shm test test/bots test/bots/uts
+VPATH += channel_shm test test/rng
 
 test: $(PROGS)
 
