Put -DSTEAL_[RANDOM|ROUNDROBIN] where it belongs -> Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 include ../common-icc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
+CPPFLAGS += -DSTEAL_RANDOM
 #CPPFLAGS += -DSTEAL_HALF
 #CPPFLAGS += -DLAST_VICTIM_FIRST
 
