--- a/src/Makefile
+++ b/src/Makefile
@@ -40,6 +40,7 @@ nbody3.c \
 uts.c uts_seq.c uts_shm.c \
 uts_dfs.c \
 brg_sha1.c \
+cilksort.c getoptions.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
 $(runtime_SRCS)
@@ -49,7 +50,7 @@ libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 #//// ALL PROGRAMS /////////////////////////////////////////////////////////#
 
 PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3
-PROGS += uts-seq uts-par
+PROGS += uts-seq uts-par cilksort
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -65,6 +66,7 @@ uts_seq_SRCS	= uts_seq.c uts.c brg_sha1.c
 uts_seq_LIBS	= m
 uts_par_SRCS	= uts_shm.c uts.c brg_sha1.c $(libtasking_SRCS)
 uts_par_LIBS	= m
+cilksort_SRCS   = cilksort.c getoptions.c $(libtasking_SRCS)
 
 #//// TEST PROGRAMS ////////////////////////////////////////////////////////#
 
