Update build flags

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,13 @@ include ../common-icc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DSTEAL_RANDOM
+#CPPFLAGS += -DSTEAL_LASTVICTIM
+#CPPFLAGS += -DSTEAL_LEAPFROG
 #CPPFLAGS += -DSTEAL_HALF
 #CPPFLAGS += -DVICTIM_CHECK
+CPPFLAGS += -DOPTIMIZE_BARRIER
+CPPFLAGS += -DSTEAL_BACKOFF
+#CPPFLAGS += -DCACHE_FUTURES
 CPPFLAGS += -DCPUFREQ=$(cpu_freq_ghz)
 
 CFLAGS += -pthread
