--- a/.gitignore
+++ b/.gitignore
@@ -21,19 +21,19 @@ src/test/*.ref
 src/*.log
 src/*.csv
 src/barrier
-src/bpc
+src/bpc*
 src/fib
 src/fibgen
-src/fib-like
+src/fib-like*
 src/looptest
-src/qsort
-src/cilksort
-src/nqueens
-src/spc
+src/qsort*
+src/cilksort*
+src/nqueens*
+src/spc*
 src/sum
-src/mm
-src/nbody3
+src/mm*
+src/nbody3*
 src/uts
-src/uts-seq
-src/uts-par
-src/lu
+src/uts-seq*
+src/uts-par*
+src/lu*
