--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-include ../common-icc.mk
+include ../common-gcc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DSTEAL_RANDOM
@@ -8,7 +8,7 @@ CPPFLAGS += -DSTEAL_RANDOM
 #CPPFLAGS += -DVICTIM_CHECK
 CPPFLAGS += -DOPTIMIZE_BARRIER
 CPPFLAGS += -DSTEAL_BACKOFF
-#CPPFLAGS += -DCACHE_FUTURES
+CPPFLAGS += -DCACHE_FUTURES
 CPPFLAGS += -DCPUFREQ=$(cpu_freq_ghz)
 
 CFLAGS += -pthread
