Add support for guided loop splitting
Related commits on branch work-stealing:
- d848f29
- a17f18b
- 152e44a

Compile with -DSPLIT=guided

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ include ../common-icc.mk
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DSTEAL_RANDOM
 CPPFLAGS += -DSTEAL_ADAPTIVE
+CPPFLAGS += -DSPLIT=half
 CPPFLAGS += -DOPTIMIZE_BARRIER
 CPPFLAGS += -DSTEAL_BACKOFF
 CPPFLAGS += -DCACHE_FUTURES
