--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,8 @@
-include ../common-gcc.mk
+include ../common-icc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DSTEAL_RANDOM
-#CPPFLAGS += -DSTEAL_LASTVICTIM
-#CPPFLAGS += -DSTEAL_LEAPFROG
-#CPPFLAGS += -DSTEAL_HALF
-#CPPFLAGS += -DVICTIM_CHECK
+CPPFLAGS += -DSTEAL_ADAPTIVE
 CPPFLAGS += -DOPTIMIZE_BARRIER
 CPPFLAGS += -DSTEAL_BACKOFF
 CPPFLAGS += -DCACHE_FUTURES
@@ -47,6 +44,7 @@ uts_dfs.c \
 brg_sha1.c \
 cilksort.c getoptions.c \
 nqueens.c \
+loopsched.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
 $(runtime_SRCS)
@@ -56,7 +54,7 @@ libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 #//// ALL PROGRAMS /////////////////////////////////////////////////////////#
 
 PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3
-PROGS += uts-seq uts-par cilksort nqueens
+PROGS += uts-seq uts-par cilksort nqueens loopsched
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -74,6 +72,7 @@ uts_par_SRCS	= uts_shm.c uts.c brg_sha1.c $(libtasking_SRCS)
 uts_par_LIBS	= m
 cilksort_SRCS   = cilksort.c getoptions.c $(libtasking_SRCS)
 nqueens_SRCS    = nqueens.c $(libtasking_SRCS)
+loopsched_SRCS  = loopsched.c $(libtasking_SRCS)
 
 #//// TEST PROGRAMS ////////////////////////////////////////////////////////#
 
