Set manager at compile time
Compile with -DMANAGER_ID=<ID> (default is 0)

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 include ../common-icc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
+CPPFLAGS += -DMANAGER_ID=1
 CPPFLAGS += -DSTEAL_RANDOM
 CPPFLAGS += -DSTEAL_ADAPTIVE
 CPPFLAGS += -DSPLIT=half
