Update preprocessor and compiler flags

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,12 +3,16 @@ include ../common-icc.mk
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DMANAGER_ID=1
 CPPFLAGS += -DSTEAL_RANDOM
+#CPPFLAGS += -DSTEAL_LASTVICTIM
 CPPFLAGS += -DSTEAL_ADAPTIVE
-CPPFLAGS += -DSPLIT=half
+CPPFLAGS += -DSPLIT=adaptive
 CPPFLAGS += -DOPTIMIZE_BARRIER
 CPPFLAGS += -DSTEAL_BACKOFF
 CPPFLAGS += -DCACHE_FUTURES
 CPPFLAGS += -DCPUFREQ=$(cpu_freq_ghz)
+#CPPFLAGS += -DCPUFREQ=1.05263 # Xeon Phi 5110P
+#CPPFLAGS += -DDISABLE_MANAGER
+#CPPFLAGS += -DVICTIM_CHECK
 
 CFLAGS += -pthread
 
