Add task example from final report (DFG)
Compile without -DCACHE_FUTURES

--- a/src/Makefile
+++ b/src/Makefile
@@ -52,6 +52,7 @@ cilksort.c getoptions.c \
 nqueens.c \
 loopsched.c \
 futures_api.c \
+task_example.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
 $(runtime_SRCS)
@@ -61,7 +62,7 @@ libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 #//// ALL PROGRAMS /////////////////////////////////////////////////////////#
 
 PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3
-PROGS += uts-seq uts-par cilksort nqueens loopsched futures_api
+PROGS += uts-seq uts-par cilksort nqueens loopsched futures_api task_example
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -86,10 +87,11 @@ loopsched_SRCS  = loopsched.c $(libtasking_SRCS)
 sum_SRCS = sum.c $(libtasking_SRCS)
 sum_LIBS =
 
-fibgen_SRCS 	 = fibgen.c $(libtasking_SRCS)
-looptest_SRCS	 = looptest.c $(libtasking_SRCS)
-barrier_SRCS 	 = barrier.c $(libtasking_SRCS)
-futures_api_SRCS = futures_api.c $(libtasking_SRCS)
+fibgen_SRCS 	  = fibgen.c $(libtasking_SRCS)
+looptest_SRCS	  = looptest.c $(libtasking_SRCS)
+barrier_SRCS 	  = barrier.c $(libtasking_SRCS)
+futures_api_SRCS  = futures_api.c $(libtasking_SRCS)
+task_example_SRCS = task_example.c $(libtasking_SRCS)
 
 VPATH += channel_shm test test/rng
 
