--- a/src/Makefile
+++ b/src/Makefile
@@ -52,6 +52,7 @@ nqueens.c \
 loopsched.c \
 futures_api.c \
 task_example.c \
+test_async.c \
 $(channel_SRCS) \
 $(tasking_SRCS) \
 $(runtime_SRCS)
@@ -62,6 +63,7 @@ libtasking_SRCS = $(runtime_SRCS) $(channel_SRCS) $(tasking_SRCS)
 
 PROGS = sum fibgen looptest spc bpc fib-like qsort barrier mm lu nbody3
 PROGS += uts-seq uts-par cilksort nqueens loopsched futures_api task_example
+PROGS += test_async
 
 #//// BENCHMARK PROGRAMS ///////////////////////////////////////////////////#
 
@@ -91,6 +93,7 @@ looptest_SRCS	  = looptest.c $(libtasking_SRCS)
 barrier_SRCS 	  = barrier.c $(libtasking_SRCS)
 futures_api_SRCS  = futures_api.c $(libtasking_SRCS)
 task_example_SRCS = task_example.c $(libtasking_SRCS)
+test_async_SRCS   = test_async.c $(libtasking_SRCS)
 
 VPATH += channel_shm test test/rng
 
