Promote reuse of allocated channels
Compiling with -DCHANNEL_CACHE=<N> modifies channel_alloc and
channel_free to cache up to N channels of a given type. This replaces
the changes introduced by commit b868eb8: user code is no longer
responsible for requesting free lists. Whether allocations are reused
becomes an implementation detail that not even the runtime system should
rely on.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,6 +8,7 @@ CPPFLAGS += -DOPTIMIZE_BARRIER
 CPPFLAGS += -DSTEAL_BACKOFF
 CPPFLAGS += -DCPUFREQ=$(cpu_freq_ghz)
 #CPPFLAGS += -DCPUFREQ=1.05263 # Xeon Phi 5110P
+CPPFLAGS += -DCHANNEL_CACHE=100
 #CPPFLAGS += -DLAZY_FUTURES
 
 CFLAGS += -pthread
