Separate early stealing from sending multiple steal requests
The former is enabled by defining -DSTEAL_EARLY and (optionally)
-DSTEAL_EARLY_THRESHOLD.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,8 @@ include ../common-gcc.mk
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DMANAGER_ID=1
 CPPFLAGS += -DSTEAL_ADAPTIVE
+CPPFLAGS += -DSTEAL_EARLY
+CPPFLAGS += -DSTEAL_EARLY_THRESHOLD=0
 CPPFLAGS += -DSPLIT=adaptive
 CPPFLAGS += -DMAXSTEAL=1
 CPPFLAGS += -DSTEAL_BACKOFF
