Add support for causal profiling with Coz
https://github.com/plasma-umass/coz

Sample wrapper script for running Coz:

root=$HOME/github/coz
deps=$root/deps/libelfin
coz=$root/coz

echo "LD_LIBRARY_PATH=$deps/dwarf:$deps/elf:\$LD_LIBRARY_PATH $coz "$@""
LD_LIBRARY_PATH=$deps/dwarf:$deps/elf:$LD_LIBRARY_PATH $coz "$@"

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,6 +17,15 @@ INCLUDE += -Ichannel_shm
 CFLAGS += -pthread
 LDFLAGS += -pthread
 
+# Profile with coz run --- ./prog args
+ifeq ($(USE_COZ),1)
+  COZ_ROOT := $(HOME)/github/coz
+  CPPFLAGS += -DUSE_COZ
+  CFLAGS += -g
+  INCLUDE += -I$(COZ_ROOT)/include
+  IMPORTS += -ldl
+endif
+
 channel_SRCS = \
 channel.c
 
