Use -DSTEAL=[one|half|adaptive] to configure work stealing

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ include ../common-gcc.mk
 
 CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
 CPPFLAGS += -DMANAGER_ID=1
-CPPFLAGS += -DSTEAL_ADAPTIVE
+CPPFLAGS += -DSTEAL=adaptive
 CPPFLAGS += -DSTEAL_EARLY
 CPPFLAGS += -DSTEAL_EARLY_THRESHOLD=0
 CPPFLAGS += -DSPLIT=adaptive
