--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,6 @@ include/terra_tasking_ext
 src/terra_tasking_mod
 src/terra_tasking_ext
 src/bounded_stack_test
+src/bounded_queue_test
 
 benchmark*
