--- a/src/channel_shm/Makefile
+++ b/src/channel_shm/Makefile
@@ -8,13 +8,12 @@ INCLUDE = -I. -I..
 
 LDFLAGS += -pthread -fsanitize=address
 
-PROGS = fib shift throughput utest
-SRCS = channel.c fib.c shift.c throughput.c utest.c
+PROGS = fib shift throughput
+SRCS = channel.c fib.c shift.c throughput.c
 
 fib_SRCS = fib.c channel.c
 shift_SRCS = shift.c channel.c
 throughput_SRCS = throughput.c channel.c
-utest_SRCS = utest.c channel.c
 
 VPATH += test
 
