Remove the need to define PLATFORM_SHM
PLATFORM_SCC is long dead.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 include ../common-gcc.mk
 
-CPPFLAGS += -DPLATFORM_SHM -DCHAN_SHM -DNTIME
+CPPFLAGS += -DCHAN_SHM -DNTIME
 CPPFLAGS += -DSTEAL=adaptive
 CPPFLAGS += -DSTEAL_EARLY
 CPPFLAGS += -DSTEAL_EARLY_THRESHOLD=0
