--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 include ../common-gcc.mk
 
-CPPFLAGS += -DCHAN_SHM -DNTIME
+CPPFLAGS += -DNTIME
 CPPFLAGS += -DSTEAL=adaptive
 CPPFLAGS += -DSTEAL_EARLY
 CPPFLAGS += -DSTEAL_EARLY_THRESHOLD=0
