Add a second backoff strategy using condition variables
Use -DBACKOFF=[sleep_exp|wait_cond] to choose a backoff strategy.

--- a/src/Makefile
+++ b/src/Makefile
@@ -13,6 +13,7 @@ CPPFLAGS += -DCPUFREQ=$(cpu_freq_ghz)
 #CPPFLAGS += -DCPUFREQ=1.05263 # Xeon Phi 5110P
 #CPPFLAGS += -DCHANNEL_CACHE=100
 CPPFLAGS += -DLAZY_FUTURES
+CPPFLAGS += -DBACKOFF=wait_cond
 
 INCLUDE += -Ichannel_shm
 CFLAGS += -pthread
