Change project structure and build rules
- `make` or `make all` build libtasking.a and all test programs
- `make libtasking` builds libtasking.a
- `make test` builds all test programs
- `make <prog>` builds only test program <prog>
- `make clean` cleans up everything (`make veryclean` is gone)

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,18 @@
 *.d
 *.exe
 *.out
+*.log
+*.csv
 *~
 *.swp
 *.DS_Store
 tags
 stuff
 
+build
+
+src/bounded_stack_test
+src/bounded_queue_test
 src/channel_shm/build
 src/channel_shm/channel
 src/channel_shm/fib
@@ -18,36 +24,5 @@ src/channel_shm/shift
 src/channel_shm/throughput
 src/channel_mpi
 
-src/test/*.tmp
-src/test/*.ref
-
-src/*.log
-src/*.csv
-src/build
-src/barrier
-src/bpc*
-src/cilksort*
-src/deque
-src/fib
-src/fibgen
-src/fib-like*
-src/loopsched
-src/lu*
-src/mm*
-src/nbody3*
-src/nqueens*
-src/qsort*
-src/spc*
-src/task_example
-src/test_async
-src/uts
-src/uts-par*
-src/uts-seq*
-
-include/terra_async.h
-include/terra_tasking_mod
-include/terra_tasking_ext
-src/terra_tasking_mod
-src/terra_tasking_ext
-src/bounded_stack_test
-src/bounded_queue_test
+test/*.tmp
+test/*.ref
